Issue 493: CapMe: send credentials interactively to avoid exposing on command line

--- a/capme/.inc/config.php.sample
+++ b/capme/.inc/config.php.sample
@@ -1,7 +1,14 @@
 <?php
 // DB Info.
-$dbHost = '10.13.1.226';
-$dbName = 'sguildb';
+$dbHost = '127.0.0.1';
+$dbName = 'securityonion_db';
 $dbUser = 'readonly';
-$dbPass = 'readonly';
+$dbPass = 'securityonion';
+
+// Sguild Info
+
+$sgVer  = "SGUIL-0.9.0 OPENSSL ENABLED";
+$sgHost = "127.0.0.1";
+$sgPort = "7734";
+
 ?>
